# BitNet

BitNetDefinition/: README.md  requirements.txt  setup.py
BitNetDefinition/examples/dynamic/: expansion_demo.py
BitNetDefinition/examples/rl/: ppo_training.py
BitNetDefinition/examples/temporal/: laplace_demo.py
BitNetDefinition/examples/ternary/: basic_ternary_layer.py
BitNetDefinition/src/data/: datasets.py  preprocessing.py
BitNetDefinition/src/models/: trillm.py
BitNetDefinition/src/models/dynamic/: expansion.py  performance.py  timestamp.py
BitNetDefinition/src/models/temporal/: laplace.py  snn.py  temporal_data.py
BitNetDefinition/src/models/ternary/: layers.py  quantization.py  training.py
BitNetDefinition/src/training/: base_trainer.py  rl_trainer.py  utils.py
BitNetDefinition/src/utils/: config.py  evaluation.py  logging.py
BitNetDefinition/tests/test_dynamic/: test_expansion.py
BitNetDefinition/tests/test_integration/: test_trillm.py
BitNetDefinition/tests/test_temporal/: test_laplace.py
BitNetDefinition/tests/test_ternary/: test_layers.py
BitNetDefinition/tests/test_training/: test_base_trainer.py
rust_bitnet/: Cargo.toml  convert_weights.py
rust_bitnet/src/: layers.rs  lib.rs  main.rs  model.rs  quantization.rs  tensor_ops.rs
