[package]
name = "rust_bitnet"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Or bincode = "1.3" if binary format is preferred later
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
anyhow = "1.0"

[dev-dependencies]
ndarray-rand = "0.14"
